--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "chartist": "^0.11.4",
+    "express": "^4.17.1",
     "vue": "^2.5.2",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
